--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.3.1",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.3",
+    "@react-three/drei": "^9.97.3",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
     "clsx": "^2.1.0",
